# godot_rag

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
data/: chunks.jsonl  corpus_stats.json  link_stats.json  retrieval_eval_notes.md
data/chroma/: chroma.sqlite3
docs/: API_KEYS.md  contributing.md  index.md
docs/assets/screenshots/: MANIFEST.txt
docs/getting-started/: api-keys.md  installation.md  quick-start.md
docs/reference/: how-it-works.md  troubleshooting.md
docs/user-guide/: cli.md  python-api.md  web-ui.md
godot_rag/: __init__.py  cli.py
scripts/: chunk_pipeline.py  setup_sources.ps1  setup_sources.sh
scripts/agent/: __init__.py  godot_agent.py  prompts.py  run_prompts.py
scripts/chunk/: __init__.py  config.py  link_overrides.json  merge.py  schema.py  splitter.py
scripts/eval/: __init__.py  retrieval_eval.py
scripts/ingest/: __init__.py  chroma_utils.py  load_chroma.py  query.py  retriever.py
tests/: test_cli.py  test_godot_rag_api.py
tests/agent/: test_prompts.py
tests/chunk/: test_config.py  test_demo_chunking.py  test_demo_discovery.py  test_discovery.py  test_docs_chunking.py  test_link_inject.py  test_linking.py  test_merge.py  test_rst_utils.py  test_schema.py
tests/eval/: test_retrieval_eval.py
tests/fixtures/: sample_tutorial.rst
tests/ingest/: test_chroma.py  test_integration.py  test_retriever.py
web/: __init__.py
web/api/: __init__.py  main.py  schemas.py  sse.py
web/ui/: index.html  package-lock.json  package.json
web/ui/src/: App.css  (+4 more)
(+35 files in other folders)
