[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-rag"
version = "0.1.0"
description = "RAG assistant for Godot 4.x — search official docs and demo projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "godot-rag contributors" }]
keywords = ["godot", "rag", "langchain", "chromadb", "game-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-experimental>=0.3.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
godot-ask = "godot_rag.cli:ask_main"
godot-rag = "godot_rag.cli:rag_main"

[project.urls]
Repository = "https://github.com/MohanadDiab/godot_rag"
Documentation = "https://github.com/MohanadDiab/godot_rag#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["godot_rag*", "scripts*"]
